--- a/views/partials/listresources.hbs
+++ b/views/partials/listresources.hbs
@@ -16,7 +16,7 @@
           <a href="{{link}}" target="_blank" class="ui button"><i class="ui external link alternate icon"></i></a>
         </td>
          <td>
-          <a href="/bookmark/{{../bookmark.id}}/deleteresource/{{id}}" class="ui button" id="delsong" ><i class="ui trash icon"></i></a>
+          <a href="/bookmark/{{../bookmark.id}}/deleteresource/{{id}}" class="ui button" id="delresource" ><i class="ui trash icon"></i></a>
         </td>
       </tr>
     {{/each}}
