--- a/views/partials/listbookmarks.hbs
+++ b/views/partials/listbookmarks.hbs
@@ -4,6 +4,6 @@
       {{title}}
     </h2>
        <a href="/bookmark/{{id}}" class="ui icon button"> <i class="ui folder icon"></i> </a>
-    <a href="/bookmark/deletebookmark/{{id}}" class="ui icon button" id="delplaylist" ><i class="ui trash icon"></i></a>
+    <a href="/bookmark/deletebookmark/{{id}}" class="ui icon button" id="delbookmark" ><i class="ui trash icon"></i></a>
   </section>
 {{/each}}
