--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,8 +1,10 @@
 <nav class="ui menu">
-  <header class="ui header item"> <a href="/"> Webmark </a></header>
+  <header class="ui header item"> <a href="/start"> Webmark </a></header>
   <div class="right menu">
-    <a id="dashboard" class="item" href="/dashboard"> Dashboard  </a>
+    <span class="name">{{username}}</span>
+    <a id="dashboard" class="item" href="/dashboard"> Dashboard </a>
     <a id="about" class="item" href="/about"> About </a>
+    <a id="logout" class="item" href="/logout"> Logout </a>
   </div>
 </nav>
 
