Bookmark resources are shown in card layout. They include image, title, buttons for link and delete. Contact form added. Some statistics added. Have to fix deleting of bookmark resources.

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -14,5 +14,26 @@
                 <p><abbr title="Phone">P</abbr>: +(353) 8996 00733</p>
                 <p><abbr title="Email">E</abbr>: <a href="mailto:name@example.com">webmark-slav@yahoo.com</a></p>
                 <p><abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
-    </div>
+  </div>
+  
+  <div class="container">  
+  <form id="gform" action="mailto:baskski@gmail.com" method="post">
+    <h3>Webmark Contact Form</h3>
+    <fieldset>
+      <input placeholder="Your name" name="name" type="text" tabindex="1" required autofocus>
+    </fieldset>
+    <fieldset>
+      <input placeholder="Your Email Address" name="email" type="email" tabindex="2" required>
+    </fieldset>
+    <fieldset>
+      <input placeholder="Your Phone Number" name="phone" type="tel" tabindex="3" required>
+    </fieldset>
+    <fieldset>
+      <textarea placeholder="Type your message here...." name="comment" tabindex="4" required></textarea>
+    </fieldset>
+    <fieldset>
+      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+    </fieldset>
+  </form>
+</div>
 </section>
