--- a/views/start.hbs
+++ b/views/start.hbs
@@ -22,4 +22,11 @@
   </div>
      Move your mouse over the image for another view
   </p>
+
+<h3>
+  Number of bookmark sections: {{bookmarks.length}}
+</h3>
+<h3>
+  Number of bookmark resources: {{totalBookmarkResources}}
+</h3>
 </section>
