--- a/views/partials/addresource.hbs
+++ b/views/partials/addresource.hbs
@@ -1,5 +1,9 @@
-<form class="ui stacked segment form" action="/bookmark/{{bookmark.id}}/addResource" method="POST">
-  <div class="two fields">
+<form class="ui stacked segment form" action="/bookmark/{{bookmark.id}}/addResource" method="POST" enctype="multipart/form-data">
+  <div class="three fields">
+    <div class="field">
+      <label>Picture</label>
+      <input type="file" name="picture" required>  </input>
+    </div>
     <div class="field">
       <label>Title</label>
       <input placeholder="Title" type="text" name="title" autofocus required>
