--- a/views/partials/listbookmarks.hbs
+++ b/views/partials/listbookmarks.hbs
@@ -1,7 +1,7 @@
 {{#each bookmarks}}
   <section class="ui segment">
     <h2 class="ui header">
-      {{title}}
+      {{title}} ({{resources.length}})
     </h2>
        <a href="/bookmark/{{id}}" class="ui icon button"> <i class="ui folder icon"></i> </a>
     <a href="/bookmark/deletebookmark/{{id}}" class="ui icon button" id="delbookmark" ><i class="ui trash icon"></i></a>
