--- a/views/partials/card.hbs
+++ b/views/partials/card.hbs
@@ -1,3 +1,4 @@
+{{#each bookmark.resources}}
 <div class="ui card">
   <div class="ui small centered image">
     <img src="{{picture}}">
@@ -10,3 +11,4 @@
     </div>
   </div>
 </div>
+{{/each}}
