Added comment section to about page.

--- a/views/partials/card.hbs
+++ b/views/partials/card.hbs
@@ -7,7 +7,7 @@
     <p class="center aligned header">{{title}}</p>
     <div class="center aligned meta">
       <a href="{{link}}" target="_blank" class="ui button"><i class="ui external link alternate icon"></i></a>
-      <a href="/bookmark/{{../bookmark.id}}/deleteresource/{{id}}" class="ui button" id="delresource" ><i class="ui trash icon"></i></a>
+      <a href="/bookmark/{{../bookmark.id}}/deleteresource/{{id}}" class="ui button delresource" ><i class="ui trash icon"></i></a>
     </div>
   </div>
 </div>
