--- a/views/start.hbs
+++ b/views/start.hbs
@@ -2,7 +2,7 @@
 
 <section class="ui center aligned middle aligned segment">
   <h1 class="ui header">
-    Welcome to Webmark
+    Welcome to Webmark, {{fullname}}!
   </h1>
   <p>
     A Glitch app which allows a user delete existing list of bookmarks about programming websites.
