--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,7 +75,6 @@ body {
 
 
 .container {
-/*   max-width: 400px; */
   width: 100%;
   margin: 0 auto;
   position: relative;
@@ -84,7 +83,7 @@ body {
 #gform {
   background: #F9F9F9;
   padding: 25px;
-  margin: 150px 0;
+  margin: 25px;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
@@ -104,9 +103,6 @@ fieldset {
 }
 
 #gform input[type="text"],
-#gform input[type="email"],
-#gform input[type="tel"],
-#gform input[type="url"],
 #gform textarea {
   width: 100%;
   border: 1px solid #ccc;
@@ -116,9 +112,6 @@ fieldset {
 }
 
 #gform input[type="text"]:hover,
-#gform input[type="email"]:hover,
-#gform input[type="tel"]:hover,
-#gform input[type="url"]:hover,
 #gform textarea:hover {
   -webkit-transition: border-color 0.3s ease-in-out;
   -moz-transition: border-color 0.3s ease-in-out;
@@ -136,7 +129,7 @@ fieldset {
   cursor: pointer;
   width: 100%;
   border: none;
-  background: #4CAF50;
+  background: #d18e00;
   color: #FFF;
   margin: 0 0 5px;
   padding: 10px;
@@ -144,7 +137,7 @@ fieldset {
 }
 
 #gform button[type="submit"]:hover {
-  background: #43A047;
+  background: #f2a400;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out;
