--- a/views/about.hbs
+++ b/views/about.hbs
@@ -16,24 +16,6 @@
                 <p><abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
   </div>
   
-  <div class="container">  
-  <form id="gform" action="mailto:baskski@gmail.com" method="post">
-    <h3>Webmark Contact Form</h3>
-    <fieldset>
-      <input placeholder="Your name" name="name" type="text" tabindex="1" required autofocus>
-    </fieldset>
-    <fieldset>
-      <input placeholder="Your Email Address" name="email" type="email" tabindex="2" required>
-    </fieldset>
-    <fieldset>
-      <input placeholder="Your Phone Number" name="phone" type="tel" tabindex="3" required>
-    </fieldset>
-    <fieldset>
-      <textarea placeholder="Type your message here...." name="comment" tabindex="4" required></textarea>
-    </fieldset>
-    <fieldset>
-      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
-    </fieldset>
-  </form>
-</div>
+  {{> addcomment}}
+  {{> listcomments}}
 </section>
