--- a/views/partials/addbookmark.hbs
+++ b/views/partials/addbookmark.hbs
@@ -1,4 +1,7 @@
 <form class="ui stacked segment form" action="/dashboard/addbookmark" method="POST">
+  <h3>
+    Add new bookmark category:
+  </h3>
   <div class="field">
     <label>Title</label>
     <input placeholder="Title" type="text" name="title" autofocus required>
