--- a/views/partials/addresource.hbs
+++ b/views/partials/addresource.hbs
@@ -1,4 +1,7 @@
 <form class="ui stacked segment form" action="/bookmark/{{bookmark.id}}/addResource" method="POST" enctype="multipart/form-data">
+  <h3>
+    Add new bookmark:
+  </h3>
   <div class="three fields">
     <div class="field">
       <label>Picture</label>
