--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,7 +1,7 @@
 <nav class="ui menu">
   <header class="ui header item"> <a href="/start"> Webmark </a></header>
   <div class="right menu">
-    <span class="name">{{username}}</span>
+    <span class="name">{{fullname}}</span>
     <a id="dashboard" class="item" href="/dashboard"> Dashboard </a>
     <a id="about" class="item" href="/about"> About </a>
     <a id="logout" class="item" href="/logout"> Logout </a>
