--- a/views/partials/card.hbs
+++ b/views/partials/card.hbs
@@ -1,7 +1,7 @@
 {{#each bookmark.resources}}
 <div class="ui card">
   <div class="ui small centered image">
-    <img src="{{picture}}">
+    <img src="{{picture}}" width="300" height="300">
   </div>
   <div class="content">
     <p class="center aligned header">{{title}}</p>
